2003-08-28  David Byers  <byers@lysator.liu.se>

	Handle breaking very long texts:
	* lyskom-rest.el (lyskom-fill-message): Added option of a timeout
	for filling, replaced whitespace deletion at the end with a method
	that does not rely on regexps (it seems that anchoring a regexp at
	the end of the buffer does not improve performance as much as I
	expected), and caused C-g to break out of the filling loop, but
	not out of the function.

	* vars.el.in (kom-autowrap-timeout): New variable.

	Fix bug 1117:
	* commands2.el (kom-set-garb-nice): Moved kom-set-keep-commented
	into this function. It makes more sense that way.
	(kom-set-keep-commented): Deleted this command.

	Fix bug 1128:
	* commands2.el (kom-limit-import): Support refusing HTML import.

	Fix bug 1125:
	* edit-text.el (lyskom-edit-insert-miscs): Make more of the
	separator line read-only, taking care (I hope) to get text
	properties right so the read-only property does not affect the
	subject line.

2003-08-27  David Byers  <davby@ida.liu.se>

	* compatibility.el (string-to-vector): Don't just compute the
 	result. Return it too...

	* utilities.el (lyskom-completing-read): Protect the value of
	this-command from alteration.
	(lyskom-read-from-minibuffer): Same here.

2003-08-26  David Byers  <byers@lysator.liu.se>

	* utilities.el (lyskom-magic-minibuffer-mangle-initial):
	Explicitly make properties at the front of the initial value
	nonsticky (mainly for XEmacs where they are sticky by default).
	(completing-read): Add explicity uses for all variables to avoid
	compiler warnings in XEmacs at run time.
	(read-from-minibuffer): Same.

	* commands2.el (kom-send-message): Remoed unused variables.

2003-08-25  David Byers  <byers@lysator.liu.se>

	* vars.el.in (lyskom-error-codes): Added error codes 55-61.

	* english-strings.el,swedish-strings.el: Added error codes 55-61.

	* startup.el (kom-start-anew): Use lyskom-default-language instead
	of kom-default-language to set the initial language for the